--- a/index.html
+++ b/index.html
@@ -1,155 +1,38 @@
 <html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Formulaire d'Intervention Technique</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-  <script src="https://unpkg.com/xlsx@0.15.1/dist/xlsx.full.min.js"></script>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Employee Interventions Tracking System</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-  <div class="form-container">
-    <h1>Rapport d'Intervention Technique</h1>
-    <form id="technicianForm">
-      <div class="form-group">
-        <label for="technicianName">Nom du Technicien:</label>
-        <select id="technicianName" name="technicianName" required>
-          <option value="">Sélectionnez un technicien</option>
-          <option value="DRISS">DRISS</option>
-          <option value="BRAHIM">BRAHIM</option>
-          <option value="MOUSSTAFA">MOUSSTAFA</option>
-          <option value="YOUSSEF">YOUSSEF</option>
-          <option value="ACHRAF">ACHRAF</option>
-          <option value="AYMEN">AYMEN</option>
-          <option value="REDA">REDA</option>
-          <option value="ABDERAHMAN">ABDERAHMAN</option>
-          <option value="OUSSAMA">OUSSAMA</option>
-          <option value="ASOPHI">ASOPHI</option>
-          <option value="autre">Autre</option>
-        </select>
-      </div>
-      <div class="form-group">
-        <label for="submissionDate">Date de Soumission:</label>
-        <input type="date" id="submissionDate" name="submissionDate" required>
-      </div>
-
-      <div class="form-group">
-        <label for="projectName">Nom du Projet/Client:</label>
-        <input type="text" id="projectName" name="projectName" required>
-      </div>
-
-      <div class="form-group">
-        <label>Date et Heure:</label>
-        <div id="datetime"></div>
-        <input type="hidden" name="dateTime" id="dateTimeInput">
-      </div>
-
-      <div class="form-group">
-        <label>Localisation:</label>
-        <div id="location">Recherche de la position...</div>
-        <input type="hidden" name="location" id="locationInput">
-      </div>
-
-      <div class="form-group">
-        <label>Type d'Intervention:</label>
-        <select id="interventionType" name="interventionType" required>
-          <option value="">Sélectionnez le type</option>
-          <option value="electricite">Électricité</option>
-          <option value="domotique">Programmation (Domotique)</option>
-          <option value="climatisation/chauffage">Climatisation/Chauffage</option>
-          <option value="sonorisation">Sonorisation</option>
-          <option value="videophone">Vidéophone</option>
-          <option value="supervision">Supervision</option>
-          <option value="autre">Autre</option>
-        </select>
-      </div>
-
-      <div class="form-group">
-        <label>Nature du Problème:</label>
-        <select id="problemType" name="natureProbleme" required>
-          <option value>Sélectionnez le problème</option>
-        </select>
-      </div>
-
-      <div class="form-group">
-        <label>État de l'Intervention:</label>
-        <div class="radio-group">
-          <div class="radio-option">
-            <input type="radio" id="repare" name="status" value="repare" required>
-            <label for="repare">Réparé</label>
-          </div>
-          <div class="radio-option">
-            <input type="radio" id="remplacement" name="status" value="remplacement">
-            <label for="remplacement">Remplacement de pièce</label>
-          </div>
-          <div class="radio-option">
-            <input type="radio" id="maintenance" name="status" value="maintenance">
-            <label for="maintenance">Maintenance préventive</label>
-          </div>
-          <div class="radio-option">
-            <input type="radio" id="autre" name="status" value="autre">
-            <label for="autre">Autre</label>
-          </div>
-        </div>
-      </div>
-
-      <div class="form-group">
-        <label for="interventionStatus">Statut de l'intervention:</label>
-        <select id="interventionStatus" name="interventionStatus" required>
-          <option value="">Sélectionnez le statut</option>
-          <option value="en_cours">En cours</option>
-          <option value="terminee">Terminée</option>
-        </select>
-      </div>
-
-      <div class="form-group">
-        <label for="comments">Commentaires:</label>
-        <textarea id="comments" name="comments" placeholder="Ajoutez vos commentaires ici..."></textarea>
-      </div>
-
-      <div class="summary-container">
-        <div class="summary-header">
-          <h3>Récapitulatif de l'Intervention</h3>
-          <button type="button" id="toggleSummary" class="toggle-summary">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
-              <path d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"/>
-            </svg>
-          </button>
-        </div>
-      </div>
-
-      <div class="form-actions">
-        <button type="submit" id="submitTogooglesheet" style="margin-top: 10px;">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
-            <path d="M19.376 12.416L8.777 19.482c-.7.046-.137.078-.217.078-.133 0-.262-.053-.353-.146-.157-.148-.194-.368-.094-.558l3.53-6.39H5c-.202 0-.373-.116-.443-.3-.074-.181-.026-.385.116-.504l10.62-7.303c.094-.063.209-.095.323-.095.183 0 .341.084.437.232.094.147.105.333.026.49l-3.53 6.562h6.37c.204 0 .38.127.448.306.068.18.015.38-.12.495z"/>
-          </svg>
-          Send to Google Sheet
-        </button>
-      </div>
-    </form>
-  </div>
-
-  <div id="summaryModal" class="modal-overlay">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h3>Récapitulatif de l'Intervention</h3>
-        <button class="close-modal" id="closeModal">&times;</button>
-      </div>
-      <div id="summaryTableContainer">
-        <table class="summary-table">
-          <tr>
-            <th>Champ</th>
-            <th>Sélection</th>
-          </tr>
-          <tbody id="summaryTableBody">
-          </tbody>
-        </table>
-      </div>
-    </div>
-  </div>
-
-  <script src="https://unpkg.com/@supabase/supabase-js"></script>
-  <script src="main.js"></script>
+    <header>
+        <h1>Employee Interventions Tracking System</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h2>Welcome to the Employee Interventions Tracking System</h2>
+            <p>This system is designed to help track and manage employee interventions efficiently.</p>
+        </section>
+        <section>
+            <h2>Features</h2>
+            <ul>
+                <li>Track employee performance</li>
+                <li>Manage interventions</li>
+                <li>Generate reports</li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2026 Employee Interventions Tracking System. All rights reserved.</p>
+    </footer>
 </body>
 </html>
